--- a/.github/workflows/daily-report.yml
+++ b/.github/workflows/daily-report.yml
@@ -21,7 +21,7 @@ jobs:
           python-version: "3.11"
       - name: Install dependencies
         run: |
-          pip install -r cloud/requirements.txt
+          pip install -r requirements.txt
       - name: Run daily report
         run: |
           python cloud/report.py
